Readme & embeddings downloading

--- a/actual.ipynb
+++ b/actual.ipynb
@@ -1791,34 +1791,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Извлечение эмбеддингов для train и test\n",
+    "# # Извлечение эмбеддингов для train и test\n",
     "\n",
-    "# batch_size=64 оптимален для RTX 3060 (12GB VRAM)\n",
-    "# Если GPU с меньшей памятью — уменьшить до 32\n",
+    "# # batch_size=64 оптимален для RTX 3060 (12GB VRAM)\n",
+    "# # Если GPU с меньшей памятью — уменьшить до 32\n",
     "\n",
-    "print(\"Извлечение эмбеддингов для train...\")\n",
-    "train_text_embeddings = get_text_embeddings(\n",
-    "    train_texts,\n",
-    "    tokenizer,\n",
-    "    text_model,\n",
-    "    device,\n",
-    "    batch_size=64,\n",
-    "    max_length=128\n",
-    ")\n",
+    "# print(\"Извлечение эмбеддингов для train...\")\n",
+    "# train_text_embeddings = get_text_embeddings(\n",
+    "#     train_texts,\n",
+    "#     tokenizer,\n",
+    "#     text_model,\n",
+    "#     device,\n",
+    "#     batch_size=64,\n",
+    "#     max_length=128\n",
+    "# )\n",
     "\n",
-    "print(f\"\\nИзвлечение эмбеддингов для test...\")\n",
-    "test_text_embeddings = get_text_embeddings(\n",
-    "    test_texts,\n",
-    "    tokenizer,\n",
-    "    text_model,\n",
-    "    device,\n",
-    "    batch_size=64,\n",
-    "    max_length=128\n",
-    ")\n",
+    "# print(f\"\\nИзвлечение эмбеддингов для test...\")\n",
+    "# test_text_embeddings = get_text_embeddings(\n",
+    "#     test_texts,\n",
+    "#     tokenizer,\n",
+    "#     text_model,\n",
+    "#     device,\n",
+    "#     batch_size=64,\n",
+    "#     max_length=128\n",
+    "# )\n",
     "\n",
-    "print(f\"\\nЭмбеддинги извлечены:\")\n",
-    "print(f\"- Train: {train_text_embeddings.shape}\")\n",
-    "print(f\"- Test: {test_text_embeddings.shape}\")"
+    "# print(f\"\\nЭмбеддинги извлечены:\")\n",
+    "# print(f\"- Train: {train_text_embeddings.shape}\")\n",
+    "# print(f\"- Test: {test_text_embeddings.shape}\")"
    ]
   },
   {
@@ -1828,14 +1828,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Сохранение эмбеддингов на диск (чтобы не извлекать повторно)\n",
+    "# # Сохранение эмбеддингов на диск (чтобы не извлекать повторно)\n",
     "\n",
-    "np.save('train_text_embeddings.npy', train_text_embeddings)\n",
-    "np.save('test_text_embeddings.npy', test_text_embeddings)\n",
+    "# np.save('train_text_embeddings.npy', train_text_embeddings)\n",
+    "# np.save('test_text_embeddings.npy', test_text_embeddings)\n",
     "\n",
-    "print(\"Эмбеддинги сохранены:\")\n",
-    "print(\"- train_text_embeddings.npy\")\n",
-    "print(\"- test_text_embeddings.npy\")"
+    "# print(\"Эмбеддинги сохранены:\")\n",
+    "# print(\"- train_text_embeddings.npy\")\n",
+    "# print(\"- test_text_embeddings.npy\")"
    ]
   },
   {
@@ -1853,11 +1853,11 @@
     }
    ],
    "source": [
-    "# # [ОПЦИОНАЛЬНО] Загрузка эмбеддингов с диска (если уже извлечены)\n",
+    "# [ОПЦИОНАЛЬНО] Загрузка эмбеддингов с диска (если уже извлечены)\n",
     "\n",
-    "# train_text_embeddings = np.load('train_text_embeddings.npy')\n",
-    "# test_text_embeddings = np.load('test_text_embeddings.npy')\n",
-    "# print(f\"Эмбеддинги загружены: train {train_text_embeddings.shape}, test {test_text_embeddings.shape}\")"
+    "train_text_embeddings = np.load('train_text_embeddings.npy')\n",
+    "test_text_embeddings = np.load('test_text_embeddings.npy')\n",
+    "print(f\"Эмбеддинги загружены: train {train_text_embeddings.shape}, test {test_text_embeddings.shape}\")"
    ]
   },
   {
@@ -2472,58 +2472,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "aef7343b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Извлечение image эмбеддингов для train и test\n",
+    "# Извлечение image эмбеддингов для train и test\n",
     "\n",
-    "# print(\"Извлечение эмбеддингов для train изображений...\")\n",
-    "# train_image_embeddings = get_image_embeddings(\n",
-    "#     df=train_df,\n",
-    "#     images_path=TRAIN_IMAGES_PATH,\n",
-    "#     model=image_model,\n",
-    "#     transform=image_transform,\n",
-    "#     device=device,\n",
-    "#     batch_size=32  # Меньше батч для картинок (больше памяти)\n",
-    "# )\n",
+    "print(\"Извлечение эмбеддингов для train изображений...\")\n",
+    "train_image_embeddings = get_image_embeddings(\n",
+    "    df=train_df,\n",
+    "    images_path=TRAIN_IMAGES_PATH,\n",
+    "    model=image_model,\n",
+    "    transform=image_transform,\n",
+    "    device=device,\n",
+    "    batch_size=32  # Меньше батч для картинок (больше памяти)\n",
+    ")\n",
     "\n",
-    "# print(f\"\\nИзвлечение эмбеддингов для test изображений...\")\n",
-    "# test_image_embeddings = get_image_embeddings(\n",
-    "#     df=test_df,\n",
-    "#     images_path=TEST_IMAGES_PATH,\n",
-    "#     model=image_model,\n",
-    "#     transform=image_transform,\n",
-    "#     device=device,\n",
-    "#     batch_size=32\n",
-    "# )\n",
+    "print(f\"\\nИзвлечение эмбеддингов для test изображений...\")\n",
+    "test_image_embeddings = get_image_embeddings(\n",
+    "    df=test_df,\n",
+    "    images_path=TEST_IMAGES_PATH,\n",
+    "    model=image_model,\n",
+    "    transform=image_transform,\n",
+    "    device=device,\n",
+    "    batch_size=32\n",
+    ")\n",
     "\n",
-    "# print(f\"\\nImage эмбеддинги извлечены:\")\n",
-    "# print(f\"- Train: {train_image_embeddings.shape}\")\n",
-    "# print(f\"- Test: {test_image_embeddings.shape}\")"
+    "print(f\"\\nImage эмбеддинги извлечены:\")\n",
+    "print(f\"- Train: {train_image_embeddings.shape}\")\n",
+    "print(f\"- Test: {test_image_embeddings.shape}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "92458c12",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Сохранение image эмбеддингов на диск\n",
+    "# Сохранение image эмбеддингов на диск\n",
     "\n",
-    "# np.save('train_image_embeddings.npy', train_image_embeddings)\n",
-    "# np.save('test_image_embeddings.npy', test_image_embeddings)\n",
+    "np.save('train_image_embeddings.npy', train_image_embeddings)\n",
+    "np.save('test_image_embeddings.npy', test_image_embeddings)\n",
     "\n",
-    "# print(\"Image эмбеддинги сохранены:\")\n",
-    "# print(\"- train_image_embeddings.npy\")\n",
-    "# print(\"- test_image_embeddings.npy\")"
+    "print(\"Image эмбеддинги сохранены:\")\n",
+    "print(\"- train_image_embeddings.npy\")\n",
+    "print(\"- test_image_embeddings.npy\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "e718ce55",
    "metadata": {},
    "outputs": [
@@ -2536,11 +2536,11 @@
     }
    ],
    "source": [
-    "# [ОПЦИОНАЛЬНО] Загрузка image эмбеддингов с диска (если уже извлечены)\n",
+    "# # [ОПЦИОНАЛЬНО] Загрузка image эмбеддингов с диска (если уже извлечены)\n",
     "\n",
-    "train_image_embeddings = np.load('train_image_embeddings.npy')\n",
-    "test_image_embeddings = np.load('test_image_embeddings.npy')\n",
-    "print(f\"Image эмбеддинги загружены: train {train_image_embeddings.shape}, test {test_image_embeddings.shape}\")"
+    "# train_image_embeddings = np.load('train_image_embeddings.npy')\n",
+    "# test_image_embeddings = np.load('test_image_embeddings.npy')\n",
+    "# print(f\"Image эмбеддинги загружены: train {train_image_embeddings.shape}, test {test_image_embeddings.shape}\")"
    ]
   },
   {
