--- a/actual.ipynb
+++ b/actual.ipynb
@@ -1791,34 +1791,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Извлечение эмбеддингов для train и test\n",
+    "# Извлечение эмбеддингов для train и test\n",
     "\n",
-    "# # batch_size=64 оптимален для RTX 3060 (12GB VRAM)\n",
-    "# # Если GPU с меньшей памятью — уменьшить до 32\n",
+    "# batch_size=64 оптимален для RTX 3060 (12GB VRAM)\n",
+    "# Если GPU с меньшей памятью — уменьшить до 32\n",
     "\n",
-    "# print(\"Извлечение эмбеддингов для train...\")\n",
-    "# train_text_embeddings = get_text_embeddings(\n",
-    "#     train_texts,\n",
-    "#     tokenizer,\n",
-    "#     text_model,\n",
-    "#     device,\n",
-    "#     batch_size=64,\n",
-    "#     max_length=128\n",
-    "# )\n",
+    "print(\"Извлечение эмбеддингов для train...\")\n",
+    "train_text_embeddings = get_text_embeddings(\n",
+    "    train_texts,\n",
+    "    tokenizer,\n",
+    "    text_model,\n",
+    "    device,\n",
+    "    batch_size=64,\n",
+    "    max_length=128\n",
+    ")\n",
     "\n",
-    "# print(f\"\\nИзвлечение эмбеддингов для test...\")\n",
-    "# test_text_embeddings = get_text_embeddings(\n",
-    "#     test_texts,\n",
-    "#     tokenizer,\n",
-    "#     text_model,\n",
-    "#     device,\n",
-    "#     batch_size=64,\n",
-    "#     max_length=128\n",
-    "# )\n",
+    "print(f\"\\nИзвлечение эмбеддингов для test...\")\n",
+    "test_text_embeddings = get_text_embeddings(\n",
+    "    test_texts,\n",
+    "    tokenizer,\n",
+    "    text_model,\n",
+    "    device,\n",
+    "    batch_size=64,\n",
+    "    max_length=128\n",
+    ")\n",
     "\n",
-    "# print(f\"\\nЭмбеддинги извлечены:\")\n",
-    "# print(f\"- Train: {train_text_embeddings.shape}\")\n",
-    "# print(f\"- Test: {test_text_embeddings.shape}\")"
+    "print(f\"\\nЭмбеддинги извлечены:\")\n",
+    "print(f\"- Train: {train_text_embeddings.shape}\")\n",
+    "print(f\"- Test: {test_text_embeddings.shape}\")"
    ]
   },
   {
@@ -1828,14 +1828,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Сохранение эмбеддингов на диск (чтобы не извлекать повторно)\n",
+    "# Сохранение эмбеддингов на диск (чтобы не извлекать повторно)\n",
     "\n",
-    "# np.save('train_text_embeddings.npy', train_text_embeddings)\n",
-    "# np.save('test_text_embeddings.npy', test_text_embeddings)\n",
+    "np.save('train_text_embeddings.npy', train_text_embeddings)\n",
+    "np.save('test_text_embeddings.npy', test_text_embeddings)\n",
     "\n",
-    "# print(\"Эмбеддинги сохранены:\")\n",
-    "# print(\"- train_text_embeddings.npy\")\n",
-    "# print(\"- test_text_embeddings.npy\")"
+    "print(\"Эмбеддинги сохранены:\")\n",
+    "print(\"- train_text_embeddings.npy\")\n",
+    "print(\"- test_text_embeddings.npy\")"
    ]
   },
   {
@@ -1853,11 +1853,11 @@
     }
    ],
    "source": [
-    "# [ОПЦИОНАЛЬНО] Загрузка эмбеддингов с диска (если уже извлечены)\n",
+    "# # [ОПЦИОНАЛЬНО] Загрузка эмбеддингов с диска (если уже извлечены)\n",
     "\n",
-    "train_text_embeddings = np.load('train_text_embeddings.npy')\n",
-    "test_text_embeddings = np.load('test_text_embeddings.npy')\n",
-    "print(f\"Эмбеддинги загружены: train {train_text_embeddings.shape}, test {test_text_embeddings.shape}\")"
+    "# train_text_embeddings = np.load('train_text_embeddings.npy')\n",
+    "# test_text_embeddings = np.load('test_text_embeddings.npy')\n",
+    "# print(f\"Эмбеддинги загружены: train {train_text_embeddings.shape}, test {test_text_embeddings.shape}\")"
    ]
   },
   {
@@ -3097,18 +3097,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.10"
   }
  },
  "nbformat": 4,
